# FruCom

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
apps/: chat.cpp
include/core/: tensor.h
include/core/loader/: safetensors.h
include/core/ops/: ops.h
my_cuda_kernel.egg-info/: SOURCES.txt  top_level.txt
src/: kernel.cu  main.cpp
src/core/: tensor.cu
src/kernels/: rmsnorm.cu
src/loader/: safetensors.cpp
src/ops/: ops_bridge.cpp
